CHANGELOG for Plupload integration for Drupal 7

Plupload integration 7.x-2.x-dev
=================================
- #1903818 by quicksketch, slashrsm: Fixed Double dollar signs in hook_requirements().
- #1506642 by MrHaroldA | succinct: Fixed plupload.js issue with Internet Explorer.
- #1814744 by slashrsm, Kevin Hankens: File URI not available to hook_file_validate() implementations.
- #1895328 by larowlan, slashrsm: Fixed Security exploit in plupload external library examples folder.
- #1230632 by -enzo-, slashrsm: Fixed hard-coded file size limits.
- by slashrsm: Fix CodeSniffer errors.
- #1827368 by Kevin Hankens: Fixed Use standard language when validating files.
- #1565898 by slashrsm: Create docs for Plupload element usage in README.txt.
- #1111036 by slashrsm: Blacklist script extensions if 'allow_insecure_uploads' isn't set to TRUE.
- #1426088 by slashrsm: Anonymous User can't upload.

Plupload integration 7.x-1.0
=================================
- #1414486 by nbucknor, slashrsm: Improvements of error handling for multiple plupload elements on a single form.

Plupload integration 7.x-1.0-rc1
==================================
- by slashrsm: Fix 3 Coder review notices.
- by slashrsm: Removed unnecessary popup caused by previous commit.
- #1414486 by nbucknor, annblack: Allow for Multiple Plupload elements in a form.
- #1461884 by atlea: File uploads larger than php post_max_size broken
- #1445172 by Moloc: Use drupal_unlink() instead unlink()

Plupload integration 7.x-1.0-beta4
==================================
- #1230632 by ksenzee: Hard-coded file size limits.
- #1219992 by slashrsm, axe312, Dave Reid: Add support for Drupal native translations.
- #1111054 by George Petsagourakis: Convert plupload_fix_temporary_filename() a private function
- #1316438 by jcfiala, slashrsm: Plupload in AJAX call causes form.submit handler to be added multiple times
- #1300620 by jamiecuthill, ksenzee: Update to 1.5.1.1 because uploading is broken in Firefox 7