@@ -110,7 +110,13 @@ Drupal.behaviors.pluploadform = {
                     for (var attr in originalFormAttributes) {
                       $form.attr(attr, originalFormAttributes[attr]);
                     }
-                    $form.submit();
+                    // Click a specific element if one is specified.
+                    if (settings.plupload[id].submit_element) {
+                      $(settings.plupload[id].submit_element).click();
+                    }
+                    else {
+                      $form.submit();
+                    }
                     return true;
                   }
                 }
